# Visual-Programming-project1

./: ALL_QUERIES FOR MSSQL  Project-Inventory_Management_Complete.rar  README.md
Screenshots/: readme.txt
backend/: Cargo.toml  readme.txt
backend/src/: Requests_received.txt  auth.rs  main.rs
backend/src/mssql/: mod.rs
backend/src/routes/: mod.rs
backend/src/routes/products/: mod.rs
frontend/: App.xaml  App.xaml.cs  Dashboard.xaml  MainWindow.xaml  MainWindow.xaml.cs  Products.xaml  Products.xaml.cs  createwindow.xaml  createwindow.xaml.cs  dashboard.xaml.cs  frontend.csproj  frontend.sln  readme.txt  updatewindow.xaml  updatewindow.xaml.cs
