[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  
futures-util = "0.3"
tiberius = { version = "0.6.1", features = ["chrono", "rust_decimal"] } 
tokio-util = { version = "0.6", features = ["compat"] }
axum = { version = "0.7.9", features = ["http2"] }  
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
serde = "1.0.216"
serde_json = "1.0.133"
hyper = { version = "1.5.1", features = ["http2", "server"] }  
argon2 = "0.5.3"
axum-extra = "0.9.6"

